--- a/documentation/src/main.tex
+++ b/documentation/src/main.tex
@@ -19,6 +19,9 @@
 \usepackage{amsmath}
 \usepackage{csquotes}
 
+% Packages
+\usepackage{hyperref}
+
 % Document
 \begin{document}
     \include{deckblatt}
