--- a/documentation/src/main.bib
+++ b/documentation/src/main.bib
@@ -14,6 +14,12 @@
 	url = {https://www.whatismyip.com}
 }
 
+@online {anaconda,
+	title = {Anaconda},
+	lastchecked = {27. Januar 2024},
+	url = {https://www.anaconda.com/}
+}
+
 
 @online {TexMaker,
 	author = {Pascal Brachet},
