--- a/documentation/src/Motivation.tex
+++ b/documentation/src/Motivation.tex
@@ -9,7 +9,9 @@ welche die Ip-Adresse von einem Ger{"a}t zum anderen {"u}bertr{"a}gt.
 ``Nein, es dauert genauso lang'' h{"o}re ich dich sagen.
 Wahrscheinlich hast du recht.
 Na ja, ich habe trotzdem einige Monate an einer Webseite entwickelt, die im Prinzip das macht.
-Es handelt sich bei IpShare also um ein overengineertes Clipboard.
+Frei nach dem Motto automatisiere 3 Monate, eine Aufgabe die 3 Sekunden dauert.
+Bei IpShare handelt es sich also im Prinzip um ein overengineertes Clipboard.
+
 
 \section{Projektidee}\label{sec:projektidee}
 Spa{\ss} beiseite, tats{"a}chlich habe ich allerdings einen Anwendungsfall, indem ich so etwas brauche.
