--- a/documentation/src/Motivation.tex
+++ b/documentation/src/Motivation.tex
@@ -14,7 +14,7 @@ Bei IpShare handelt es sich also im Prinzip um ein overengineertes Clipboard.
 
 
 \section{Projektidee}\label{sec:projektidee}
-Spa{\ss} beiseite, tats{"a}chlich habe ich allerdings einen Anwendungsfall, indem ich so etwas brauche.
+Spa{\ss} beiseite, tats{"a}chlich habe ich einen Anwendungsfall, indem ich so etwas brauche.
 An unserer Hochschule bekommt man im Eduroam-WLAN eine {"o}ffentliche Ip-Adresse.
 F{"u}r Experimente ist das als Student nat{"u}rlich ein Fest.
 Jedenfalls wollte ich mich von einem Raspberry Pi aus einem 5G Netz zu meinem Laptop verbinden.
@@ -27,13 +27,14 @@ W{"a}hrend ich das hier schreibe, ist das noch nicht erprobt worden, sollte aber
 Diese Problematik gab mir jedenfalls die Idee f{"u}r das Projekt.
 
 \section{Ziel}\label{sec:ziel}
+Ziel ist eine Anwendung über die sich IP-Adressen Teilen lassen.
 Ob mein Projekt gro{\ss}e Verwendung f{"u}r andere hat bleibt abzuwarten.
 Im Wesentlichen ging es darum mich mit Webentwicklung und im speziellen Flask zu besch{"a}ftigen.
 Etwas zu experimentieren und dabei zu lernen.
 Dementsprechend sind manche Designentscheidungen auch getroffen, einfach um zu experimentieren.
 Manche Dinge sind daher auch nicht ganz einheitlich implementiert.
 
-\section{bestehende L{"o}sungen}\label{sec:bestehende-losungen}
+\section{Bestehende L{"o}sungen}\label{sec:bestehende-losungen}
 Es gibt bereits Webseiten, welche einem die eigene {"o}ffentliche Ip Adresse verraten.
 Diese w{"a}hren z.B. whatismyipaddress.com\cite{whatismyipaddress} oder whatismyip\cite{whatismyip}.
 Sie erlauben es aber nicht, die Adresse von einem anderen Ger{"a}t zu bekommen.
