--- a/documentation/src/main.bib
+++ b/documentation/src/main.bib
@@ -20,36 +20,47 @@
 	url = {https://www.anaconda.com/}
 }
 
-
-@online {TexMaker,
-	author = {Pascal Brachet},
-	title = {TexMaker},
-	month = {9. Oktober},
-	year = {2022},
-	url = {https://www.xm1math.net/texmaker/}
-}
-
-@online {sae-j1939-vector,
-	author = {Vector},
-    institution = {© 2010 - 2023 Vector Informatik GmbH},
-	title = {SAE J1939 Offener Standard für die Vernetzung und Kommunikation im Nutzfahrzeugbereich},
-    lastchecked = {31. Dezember 2023},
-	url = {https://www.vector.com/de/de/know-how/protokolle/sae-j1939/}
-}
-
-@online {sae-j1939-cooperhill,
-	author = {Wilfried Voss},
-    institution = {Copperhill Technologies Corporation},
-	title = {SAE J1939 Programming with Arduino - Transport Protocol – RTS/CTS Session (SAE J1939/21)},
-    lastchecked = {31. Dezember 2023},
-    month = {15. Oktober},
+@online {getip,
+	author = {Tirtha Rahaman},
+	title = {The below code always gives the public IP of the client (and not a private IP behind a proxy).},
+	month = {10. April},
 	year = {2018},
-	url = {https://copperhilltech.com/blog/sae-j1939-programming-with-arduino-transport-protocol-rtscts-session-sae-j193921/}
+    lastchecked = {01. Februar 2024},
+	url = {https://stackoverflow.com/a/49760261}
 }
 
-@online {mermaid,
-	author = {Knut Sveidqvist},
-	title = {Mermaid Diagramming and charting tool},
-	url = {https://mermaid.js.org/}
+@online {socket,
+	author = {©, Miguel Grinberg},
+	title = {Flask-SocketIO},
+	year = {2018},
+	url = {https://flask-socketio.readthedocs.io/en/latest/getting_started.html}
+}
+
+@online {jwt,
+	author = {José Padilla},
+	title = {PyJWT on readthedocs},
+	url = {https://pyjwt.readthedocs.io/en/latest/}
+}
+
+@online {cassiomolin,
+	author = {cassiomolin},
+	title = {Best HTTP Authorization header type for JWT},
+	month = {7. October},
+	year = {2021},
+    lastchecked = {01. Februar 2024},
+	url = {https://stackoverflow.com/a/47157391}
+}
+
+@online {encodeURI,
+	author = {mozilla},
+	title = {encodeURI},
+    lastchecked = {01. Februar 2024},
+	url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/encodeURI}
+}
+
+@online {unquoteplus,
+	title = {unquote plus},
+    lastchecked = {01. Februar 2024},
+	url = {https://docs.python.org/3/library/urllib.parse.html#urllib.parse.unquote_plus}
 }
 
